fix button on section price version tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -559,6 +559,11 @@ h1{
   margin-top: 3rem;
 }
 
+#button 
+{
+  width: 25%;
+}
+
 }
 
 /* Desktop */
